--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			}
 			#projects .container a
 			{
-				border:1px solid rgba(0,0,0,0);margin-bottom:1px;float:left;width:111px;height:135px;line-height:0
+				border:0px solid rgba(0,0,0,0);margin-bottom:0px;float:left;width:0px;height:0px;line-height:0
 			}
 			#projects .container a:not(:nth-child(3n)) 
 			{
@@ -144,7 +144,7 @@
 			}
 			#projects .container a img
 			{
-				width:111px;height:135px;opacity:1;position:relative
+				width:0px;height:0px;opacity:1;position:relative
 			}
 			#projects .container a figcaption
 			{
@@ -186,6 +186,38 @@
 			{
 				padding-right:16px;color:#fff;font-size:11px;line-height:24px;text-decoration:underline
 			}
+			#alphabets
+			{
+				margin: auto;
+			}
+			.control
+			{
+				margin: auto;
+				width:1024px;
+				height:414px;
+				text-align:center;
+			}
+			button
+			{
+			
+				padding:0px;
+				margin:0px;
+			}
+			button:hover
+			{
+				
+				opacity:0.4;
+				filter:alpha(opacity=40);
+			}
+			img
+			{
+
+				padding:0px;
+				margin:0px;
+				width:100px;
+				height:135px;
+			}
+			
 		</style>
 		
 
@@ -208,6 +240,10 @@
 			<meta name="description" content="This is a simple tool to help young kids learn word spelling and reading."/>
 			<link rel="icon" type="image/jpg" href=""/>
 			<link rel="image" type="image/png" href="/img/meta/workshop.png"/>
+			<SCRIPT>
+			
+			
+			</SCRIPT>
 	</head>
 	
 	<body>
@@ -228,14 +264,42 @@
 			
 		<div id="mast">
 			<div class="container">
-				<a id="update">
-					<strong>Loeschen !</strong>
-				</a>
+				
 			</div>
 		</div>
+		<div id="alphabets">
+		<div class="control">
 
+			<button onclick="touchtype('A');">	<img src="\img\thumbs\a.JPG" alt="A">	</button>
+			<button onclick="touchtype('B');">	<img src="\img\thumbs\b.JPG" alt="B">	</button>
+			<button onclick="touchtype('C');">	<img src="\img\thumbs\c.JPG" alt="C">	</button>
+			<button onclick="touchtype('D');">	<img src="\img\thumbs\d.JPG" alt="D">	</button>
+			<button onclick="touchtype('E');">	<img src="\img\thumbs\e.JPG" alt="E">	</button>
+			<button onclick="touchtype('F');">	<img src="\img\thumbs\f.JPG" alt="F">	</button>
+			<button onclick="touchtype('G');">	<img src="\img\thumbs\g.JPG" alt="G">	</button>
+			<button onclick="touchtype('H');">	<img src="\img\thumbs\h.JPG" alt="H">	</button>
+			<button onclick="touchtype('I');">	<img src="\img\thumbs\i.JPG" alt="I">	</button>
+			<button onclick="touchtype('J');">	<img src="\img\thumbs\j.JPG" alt="J">	</button>
+			<button onclick="touchtype('K');">	<img src="\img\thumbs\k.JPG" alt="K">	</button>
+			<button onclick="touchtype('L');">	<img src="\img\thumbs\l.JPG" alt="L">	</button>
+			<button onclick="touchtype('M');">	<img src="\img\thumbs\m.JPG" alt="M">	</button>
+			<button onclick="touchtype('N');">	<img src="\img\thumbs\n.JPG" alt="N">	</button>
+			<button onclick="touchtype('O');">	<img src="\img\thumbs\o.JPG" alt="O">	</button>
+			<button onclick="touchtype('P');">	<img src="\img\thumbs\p.JPG" alt="P">	</button>
+			<button onclick="touchtype('Q');">	<img src="\img\thumbs\q.JPG" alt="Q">	</button>
+			<button onclick="touchtype('R');">	<img src="\img\thumbs\r.JPG" alt="R">	</button>
+			<button onclick="touchtype('S');">	<img src="\img\thumbs\s.JPG" alt="S">	</button>
+			<button onclick="touchtype('T');">	<img src="\img\thumbs\t.JPG" alt="T">	</button>
+			<button onclick="touchtype('U');">	<img src="\img\thumbs\u.JPG" alt="U">	</button>
+			<button onclick="touchtype('V');">	<img src="\img\thumbs\v.JPG" alt="V">	</button>
+			<button onclick="touchtype('W');">	<img src="\img\thumbs\w.JPG" alt="W">	</button>
+			<button onclick="touchtype('X');">	<img src="\img\thumbs\x.JPG" alt="X">	</button>
+			<button onclick="touchtype('Y');">	<img src="\img\thumbs\y.JPG" alt="Y">	</button>
+			<button onclick="touchtype('Z');">	<img src="\img\thumbs\z.JPG" alt="Z">	</button>
+			<button onclick="cleartype();">	<img src="\img\thumbs\clear.JPG" alt="clear">	</button>
 			
-			
+		</div>
+		</div>
 		<section id="projects">
 			<div class="container">
 				<div id="carousel">
