--- a/index.html
+++ b/index.html
@@ -270,33 +270,33 @@
 		<div id="alphabets">
 		<div class="control">
 
-			<button onclick="touchtype('A');">	<img src="\img\thumbs\a.JPG" alt="A">	</button>
-			<button onclick="touchtype('B');">	<img src="\img\thumbs\b.JPG" alt="B">	</button>
-			<button onclick="touchtype('C');">	<img src="\img\thumbs\c.JPG" alt="C">	</button>
-			<button onclick="touchtype('D');">	<img src="\img\thumbs\d.JPG" alt="D">	</button>
-			<button onclick="touchtype('E');">	<img src="\img\thumbs\e.JPG" alt="E">	</button>
-			<button onclick="touchtype('F');">	<img src="\img\thumbs\f.JPG" alt="F">	</button>
-			<button onclick="touchtype('G');">	<img src="\img\thumbs\g.JPG" alt="G">	</button>
-			<button onclick="touchtype('H');">	<img src="\img\thumbs\h.JPG" alt="H">	</button>
-			<button onclick="touchtype('I');">	<img src="\img\thumbs\i.JPG" alt="I">	</button>
-			<button onclick="touchtype('J');">	<img src="\img\thumbs\j.JPG" alt="J">	</button>
-			<button onclick="touchtype('K');">	<img src="\img\thumbs\k.JPG" alt="K">	</button>
-			<button onclick="touchtype('L');">	<img src="\img\thumbs\l.JPG" alt="L">	</button>
-			<button onclick="touchtype('M');">	<img src="\img\thumbs\m.JPG" alt="M">	</button>
-			<button onclick="touchtype('N');">	<img src="\img\thumbs\n.JPG" alt="N">	</button>
-			<button onclick="touchtype('O');">	<img src="\img\thumbs\o.JPG" alt="O">	</button>
-			<button onclick="touchtype('P');">	<img src="\img\thumbs\p.JPG" alt="P">	</button>
-			<button onclick="touchtype('Q');">	<img src="\img\thumbs\q.JPG" alt="Q">	</button>
-			<button onclick="touchtype('R');">	<img src="\img\thumbs\r.JPG" alt="R">	</button>
-			<button onclick="touchtype('S');">	<img src="\img\thumbs\s.JPG" alt="S">	</button>
-			<button onclick="touchtype('T');">	<img src="\img\thumbs\t.JPG" alt="T">	</button>
-			<button onclick="touchtype('U');">	<img src="\img\thumbs\u.JPG" alt="U">	</button>
-			<button onclick="touchtype('V');">	<img src="\img\thumbs\v.JPG" alt="V">	</button>
-			<button onclick="touchtype('W');">	<img src="\img\thumbs\w.JPG" alt="W">	</button>
-			<button onclick="touchtype('X');">	<img src="\img\thumbs\x.JPG" alt="X">	</button>
-			<button onclick="touchtype('Y');">	<img src="\img\thumbs\y.JPG" alt="Y">	</button>
-			<button onclick="touchtype('Z');">	<img src="\img\thumbs\z.JPG" alt="Z">	</button>
-			<button onclick="cleartype();">	<img src="\img\thumbs\clear.JPG" alt="clear">	</button>
+			<button onclick="touchtype('A');">	<img src="https://lh4.googleusercontent.com/-rYvTeKrdSJ4/UZkedHqWH7I/AAAAAAAAAEA/YpB4f3qfEgM/s443/a.jpg" alt="A">	</button>
+			<button onclick="touchtype('B');">	<img src="https://lh5.googleusercontent.com/-l12-a1gTLoI/UZkewMyLPfI/AAAAAAAAAEA/-rY4SU7ZL9U/s443/b.jpg" alt="B">	</button>
+			<button onclick="touchtype('C');">	<img src="https://lh6.googleusercontent.com/-rkzQ-EH778s/UZkewiM2yoI/AAAAAAAAAEA/pdJ9xzdiSsw/s443/c.jpg" alt="C">	</button>
+			<button onclick="touchtype('D');">	<img src="https://lh3.googleusercontent.com/-TgD3Kj0Thbo/UZkemf60soI/AAAAAAAAAEA/Uw1Z9o_Sl6Y/s443/d.jpg" alt="D">	</button>
+			<button onclick="touchtype('E');">	<img src="https://lh4.googleusercontent.com/-T_kcvOHHzSY/UZkedvaYyZI/AAAAAAAAAEA/j9JSpqdkQGk/s443/e.jpg" alt="E">	</button>
+			<button onclick="touchtype('F');">	<img src="https://lh6.googleusercontent.com/-A5JRRDgRKR0/UZkenXdPzCI/AAAAAAAAAEA/kG3qXFZ0Gx8/s443/f.jpg" alt="F">	</button>
+			<button onclick="touchtype('G');">	<img src="https://lh5.googleusercontent.com/-OIiGox6Symc/UZkexA1zAYI/AAAAAAAAAEA/VrRSoC6b-mM/s443/g.jpg" alt="G">	</button>
+			<button onclick="touchtype('H');">	<img src="https://lh6.googleusercontent.com/-2j5r2vJXSqw/UZkexglKP8I/AAAAAAAAAEA/iiAoVNrWffk/s443/h.jpg" alt="H">	</button>
+			<button onclick="touchtype('I');">	<img src="https://lh6.googleusercontent.com/-3qdxCP9MF6Q/UZkeeBUwXOI/AAAAAAAAAEA/7BRv24eo720/s443/i.jpg" alt="I">	</button>
+			<button onclick="touchtype('J');">	<img src="https://lh4.googleusercontent.com/-1GgE_F-tYgg/UZkem51zi5I/AAAAAAAAAEA/lT16nmS_0fQ/s443/j.jpg" alt="J">	</button>
+			<button onclick="touchtype('K');">	<img src="https://lh5.googleusercontent.com/-h8VZBPnYqxI/UZkenkABanI/AAAAAAAAAEA/SVS513VTAcg/s443/k.jpg" alt="K">	</button>
+			<button onclick="touchtype('L');">	<img src="https://lh3.googleusercontent.com/-RKeKppCLTus/UZkejeqUSHI/AAAAAAAAAEA/n9-So51cric/s443/l.jpg" alt="L">	</button>
+			<button onclick="touchtype('M');">	<img src="https://lh4.googleusercontent.com/-FAn8P_dL8W8/UZkekYdRe-I/AAAAAAAAAEA/XtPAQz0XO3I/s443/m.jpg" alt="M">	</button>
+			<button onclick="touchtype('N');">	<img src="https://lh3.googleusercontent.com/-ZUkHHq91_dk/UZkelxCyYZI/AAAAAAAAAEA/efbNQJ_TTCc/s443/n.jpg" alt="N">	</button>
+			<button onclick="touchtype('O');">	<img src="https://lh4.googleusercontent.com/-b98Jrugnku0/UZkefJWOdLI/AAAAAAAAAEA/aKfnhvtaDCM/s443/o.jpg" alt="O">	</button>
+			<button onclick="touchtype('P');">	<img src="https://lh6.googleusercontent.com/--vVYZ_gpbPA/UZkeomUqiXI/AAAAAAAAAEA/mT6LtKCRFuw/s443/p.jpg" alt="P">	</button>
+			<button onclick="touchtype('Q');">	<img src="https://lh5.googleusercontent.com/-JDX0Ff658T4/UZkeqmM9arI/AAAAAAAAAEA/9P6MKFFZS-k/s443/q.jpg" alt="Q">	</button>
+			<button onclick="touchtype('R');">	<img src="https://lh3.googleusercontent.com/-FhKnNCjU6ZE/UZkepMT93iI/AAAAAAAAAEA/Ggpwg0mSe8s/s443/r.jpg" alt="R">	</button>
+			<button onclick="touchtype('S');">	<img src="https://lh6.googleusercontent.com/-ticutEv-hLk/UZkeppZ2ZaI/AAAAAAAAAEA/MXjCAPGVfzo/s443/s.jpg" alt="S">	</button>
+			<button onclick="touchtype('T');">	<img src="https://lh6.googleusercontent.com/-JQmpk05ckfo/UZkeqAe4ErI/AAAAAAAAAEA/BYacUHmF6GU/s443/t.jpg" alt="T">	</button>
+			<button onclick="touchtype('U');">	<img src="https://lh6.googleusercontent.com/-IOuJmD7kYlg/UZkefxXxmvI/AAAAAAAAAEA/w1mXxcqtlJ8/s443/u.jpg" alt="U">	</button>
+			<button onclick="touchtype('V');">	<img src="https://lh3.googleusercontent.com/-OmaHrG_Kn0A/UZkerAMtEbI/AAAAAAAAAEA/RToZJdi90Do/s443/v.jpg" alt="V">	</button>
+			<button onclick="touchtype('W');">	<img src="https://lh6.googleusercontent.com/-bE5du_dddpc/UZketNfwYnI/AAAAAAAAAEA/nUCYm5WmOhQ/s443/w.jpg" alt="W">	</button>
+			<button onclick="touchtype('X');">	<img src="https://lh3.googleusercontent.com/-fKPd1v4GyfI/UZkeuCml-bI/AAAAAAAAAEA/-yH-lo5DusE/s443/x.jpg" alt="X">	</button>
+			<button onclick="touchtype('Y');">	<img src="https://lh6.googleusercontent.com/-khSEN8Ya39s/UZkevoouhNI/AAAAAAAAAEA/llQ4gcNyxX4/s443/y.jpg" alt="Y">	</button>
+			<button onclick="touchtype('Z');">	<img src="https://lh3.googleusercontent.com/-OAo_rbED5Fk/UZkevF-5PII/AAAAAAAAAEA/D2maJ9g6jLU/s443/z.jpg" alt="Z">	</button>
+			<button onclick="cleartype();">	<img src="https://lh5.googleusercontent.com/-xdJbXZWKzXg/Ucrw5-bbqdI/AAAAAAAAAEM/yTkmn1HMYbY/s443/clear.jpg" alt="clear">	</button>
 			
 		</div>
 		</div>
