--- a/index.html
+++ b/index.html
@@ -258,13 +258,11 @@
 				<span class="container">
 					<strong>Reading Workshop</strong>.Language Tools
 				</span>
-			</h1>
-			
+			</h1>			
 		</header>
 			
 		<div id="mast">
 			<div class="container">
-				
 			</div>
 		</div>
 		<div id="alphabets">
@@ -307,8 +305,11 @@
 			</div>
 		</section>
 
-
-
-		<!--<![endif]-->
+<footer>
+      <div id="footerContent">
+		<span style="background:url(http://www.counter12.com/img-B189da7Z-26.gif) 0 0 no-repeat;width:82px;height:32px;display:inline-block"></span>
+      </div>
+    </footer>
+	
 	</body>
 </html>
